--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -8,6 +8,10 @@ engines:
     checks:
       CleanCode/BooleanArgumentFlag:
         enabled: false
+      CleanCode/ElseExpression:
+        enabled: false
+      Naming/ShortVariable:
+        enabled: false
 ratings:
   paths:
   - "**.php"
