--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,6 +1,9 @@
 engines:
   phpcodesniffer:
     enabled: true
+    config:
+      file_extensions: "php"
+      standard: "PSR1,PSR2"
   phpmd:
     enabled: true
     checks:
@@ -9,6 +12,10 @@ engines:
       CleanCode/ElseExpression:
         enabled: false
       Naming/ShortVariable:
+        enabled: false
+      Design/TooManyMethods:
+        enabled: false
+      Design/NpathComplexity:
         enabled: false
 ratings:
   paths:
