--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "authors": [
         {
             "name": "vakata",
-            "email": "database@vakata.com",
+            "email": "github@vakata.com",
             "homepage": "http://www.vakata.com",
             "role": "Developer"
         }
