--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
     },
     "require-dev": {
         "phpunit/phpunit" : "4.*",
-        "codeclimate/php-test-reporter": "dev-master"
+        "codeclimate/php-test-reporter": "dev-master",
+        "clean/phpdoc-md": "0.1.0"
     },
     "autoload": {
         "psr-4": {
@@ -35,6 +36,6 @@
     "scripts": {
         "test": "phpunit",
         "psr2": "php-cs-fixer fix ./src",
-        "phpdoc": "phpDocumentor -d ./src -t ./docs"
+        "phpdoc": "phpdoc-md"
     }
 }
