--- a/composer.json
+++ b/composer.json
@@ -15,13 +15,19 @@
             "role": "Developer"
         }
     ],
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/vakata/phpdoc-md"
+        }
+    ],
     "require": {
         "php" : ">=5.4.0"
     },
     "require-dev": {
         "phpunit/phpunit" : "4.*",
         "codeclimate/php-test-reporter": "dev-master",
-        "clean/phpdoc-md": "0.1.0"
+        "clean/phpdoc-md": "dev-master"
     },
     "autoload": {
         "psr-4": {
