--- a/composer.json
+++ b/composer.json
@@ -22,11 +22,11 @@
         }
     ],
     "require": {
-        "php" : ">=5.4.0"
+        "php" : ">=5.4.0",
+        "vakata/collection" : "1.*"
     },
     "require-dev": {
         "phpunit/phpunit" : "4.*",
-        "codeclimate/php-test-reporter": "dev-master",
         "clean/phpdoc-md": "dev-master"
     },
     "autoload": {
