--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,8 @@ services:
 sudo: false
 
 before_install:
-  - mysql -e "create database IF NOT EXISTS test;" -uroot
+  - mysql -u root -e "SET PASSWORD FOR 'root'@'localhost' = PASSWORD('')"
+  - mysql -u root -e "create database IF NOT EXISTS test;"
 
 before_script:
   - travis_retry composer self-update
