--- a/.travis.yml
+++ b/.travis.yml
@@ -6,15 +6,15 @@ php:
   - 7.0
 
 services:
-  - mysql
+  - mysql-5.6
 
 # This triggers builds to run on the new TravisCI infrastructure.
 # See: http://docs.travis-ci.com/user/workers/container-based-infrastructure/
 sudo: false
 
 before_install:
+  - mysql -e "create database IF NOT EXISTS test;" -uroot
   - mysql -u root -e "SET PASSWORD FOR 'root'@'localhost' = PASSWORD('')"
-  - mysql -u root -e "create database IF NOT EXISTS test;"
 
 before_script:
   - travis_retry composer self-update
