--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,14 @@ php:
 
 services:
   - mysql
+  - postgresql
 
 # This triggers builds to run on the new TravisCI infrastructure.
 sudo: false
 
 before_install:
   - mysql -e "create database IF NOT EXISTS test;" -uroot
+  - psql -c 'create database test;' -U postgres
 
 before_script:
   - travis_retry composer self-update
