--- a/composer.json
+++ b/composer.json
@@ -16,12 +16,14 @@
         }
     ],
     "require": {
-        "php" : ">=5.4.0",
+        "php" : ">=7.2.0",
         "vakata/collection" : "~1.5",
         "symfony/polyfill-mbstring" : "~1.8",
         "symfony/polyfill-iconv" : "~1.8"
     },
     "require-dev": {
+        "phpstan/phpstan": "^0.12",
+        "squizlabs/php_codesniffer": "^3.2",
         "phpunit/phpunit" : "6.*",
         "victorjonsson/markdowndocs": "^1.3"
     },
@@ -37,7 +39,9 @@
     },
     "scripts": {
         "test": "phpunit",
-        "psr2": "php-cs-fixer fix ./src",
-        "phpdoc": "phpdoc-md generate src > api.md"
+        "phpcs": "phpcs --standard=PSR2 --extensions=php --ignore=*/vendor/* ./",
+        "phpcsfix": "phpcbf --standard=PSR2 --extensions=php --ignore=*/vendor/* ./",
+        "phpdoc": "phpdoc-md generate src > api.md",
+        "phpstan": "phpstan analyze -c phpstan.neon -l 6 src"
     }
 }
