fixed phpstan errors

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -6,3 +6,5 @@ parameters:
 		- '#no return typehint specified.$#'
 	excludes_analyse:
 		- src/driver/ibase/Driver.php
+	universalObjectCratesClasses:
+		- vakata\database\schema\Entity
