--- a/composer.json
+++ b/composer.json
@@ -17,15 +17,12 @@
     ],
     "require": {
         "php" : ">=7.2.0",
-        "vakata/collection" : "~1.5",
-        "symfony/polyfill-mbstring" : "~1.8",
-        "symfony/polyfill-iconv" : "~1.8"
+        "vakata/collection" : "~1.5"
     },
     "require-dev": {
         "phpstan/phpstan": "^0.12",
         "squizlabs/php_codesniffer": "^3.2",
-        "phpunit/phpunit" : "6.*",
-        "victorjonsson/markdowndocs": "^1.3"
+        "phpunit/phpunit" : "6.*"
     },
     "autoload": {
         "psr-4": {
@@ -41,7 +38,6 @@
         "test": "phpunit",
         "phpcs": "phpcs --standard=PSR2 --extensions=php --ignore=*/vendor/* ./",
         "phpcsfix": "phpcbf --standard=PSR2 --extensions=php --ignore=*/vendor/* ./",
-        "phpdoc": "phpdoc-md generate src > api.md",
         "phpstan": "phpstan analyze -c phpstan.neon -l max src"
     }
 }
