--- a/composer.json
+++ b/composer.json
@@ -19,11 +19,6 @@
         "php" : ">=8.0.0",
         "vakata/collection" : "~1.5"
     },
-    "require-dev": {
-        "phpstan/phpstan": "^0.12",
-        "squizlabs/php_codesniffer": "^3.2",
-        "phpunit/phpunit" : "6.*"
-    },
     "autoload": {
         "psr-4": {
             "vakata\\database\\": "src"
@@ -38,6 +33,6 @@
         "test": "phpunit",
         "phpcs": "phpcs --standard=PSR2 --extensions=php --ignore=*/vendor/* ./",
         "phpcsfix": "phpcbf --standard=PSR2 --extensions=php --ignore=*/vendor/* ./",
-        "phpstan": "phpstan analyze -c phpstan.neon -l max src"
+        "phpstan": "phpstan analyze -c phpstan.neon -l 8 src"
     }
 }
